<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".StatisticsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/sa_tVCount"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:layout_marginBottom="30dp"
        android:rowCount="2"
        android:columnCount="2">

        <TextView android:layout_row="0" android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sa_tVGroups"/>

        <TextView android:layout_row="0" android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/textView_GroupCount"
            android:layout_gravity="end"
            android:text="0"/>

        <TextView android:layout_row="1" android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sa_tVTasks"/>

        <TextView android:layout_row="1" android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/textView_TaskCount"
            android:layout_gravity="end"
            android:text="0"/>
    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/sa_tVTaskStats"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:layout_marginBottom="30dp"
        android:rowCount="3"
        android:columnCount="2">

        <TextView android:layout_row="0" android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sa_tVCompleted"/>

        <TextView android:layout_row="0" android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/textView_Completed"
            android:layout_gravity="end"
            android:text="0"/>

        <TextView android:layout_row="1" android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sa_tVIncomplete"/>

        <TextView android:layout_row="1" android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/textView_Incomplete"
            android:layout_gravity="end"
            android:text="0"/>

        <TextView android:layout_row="2" android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sa_tVCompletedRatio"/>

        <TextView android:layout_row="2" android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/textView_CompletedRadio"
            android:layout_gravity="end"
            android:text="0"/>
    </GridLayout>

</LinearLayout>